--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,17 @@ font-weight: 500;
     background-color: #777997;
 }
 
+.gallery {
+
+    display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 48px;
+}
+
+
+
+
 
 .hidden {
     display: none;
