--- a/src/styles.css
+++ b/src/styles.css
@@ -84,11 +84,17 @@ font-weight: 500;
 
 .info {
     
-    font-size: 10px;
+    font-size: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
+}
+
+.span {
+    font-size: 8px;
+    font-style: italic;
+    font-weight: 120;
 }
 
 
