--- a/src/styles.css
+++ b/src/styles.css
@@ -1,105 +1,97 @@
-
 body {
-
-    background-color: #d9dcee;
+  background-color: #d9dcee;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .input {
-    display: block;
-    margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
-        padding-left: 10px;
-font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-   
-    min-width: 264px;
-    height: 40px;
-    border: 1px solid #ffffff;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: transparent;
-    color: var(--color-title-white);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  min-width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  color: var(--color-title-white);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-
 .input:focus {
-    outline: none;
-    border-color: #4d5ae5;
+  outline: none;
+  border-color: #4d5ae5;
 }
 
 .page-btn {
-    margin-bottom: 20px;
-    border: none;
+  margin-bottom: 20px;
+  border: none;
 
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
 
-    display: block;
-    min-width: 169px;
-    height: 40px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+  display: block;
+  min-width: 169px;
+  height: 40px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 
-    color: var(--color-title-white);
-    background-color:#7c90f3;
-    margin-left: auto;
-    margin-right: auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--color-title-white);
+  background-color: #7c90f3;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .page-btn:hover {
-    background-color: #777997;
+  background-color: #777997;
 }
 
 .load-more {
-    margin-top: 20px;
-
+  margin-top: 20px;
 }
-
 
 .gallery {
-
-    display: flex;
-    align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        column-gap: 24px;
-        row-gap: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
-
+.link {
+  text-decoration: none;
+}
 .info {
-    
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
+  color: black;
+  font-size: 12px;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 .span {
-    font-size: 8px;
-    font-style: italic;
-    font-weight: 120;
+  font-size: 8px;
+  font-style: italic;
+  font-weight: 120;
 }
 
-
-
-
 .hidden {
-    display: none;
+  display: none;
 }
